fix(umbrella): protect toy-service updates
Restore toy-service local tag to v0.3.39-commit.8a1475e after the image-updater downgrade.

Use a semver update strategy for toy-service to avoid regressing when registry metadata is flaky.

--- a/charts/bitiq-umbrella/templates/app-toy-service.yaml
+++ b/charts/bitiq-umbrella/templates/app-toy-service.yaml
@@ -22,7 +22,7 @@ metadata:
     {{- if $toyServiceRepo }}
     argocd-image-updater.argoproj.io/image-list: toy-service={{ $toyServiceRepo }}
     {{- end }}
-    argocd-image-updater.argoproj.io/toy-service.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/toy-service.update-strategy: semver
     argocd-image-updater.argoproj.io/toy-service.platforms: {{ .Values.imageUpdater.platforms | default "linux/amd64" }}
     {{- if .Values.imageUpdater.pullSecret }}
     argocd-image-updater.argoproj.io/toy-service.pull-secret: {{ .Values.imageUpdater.pullSecret | quote }}
