fix(charts): open dns egress for nostr-query

--- a/charts/nostr-query/templates/networkpolicy.yaml
+++ b/charts/nostr-query/templates/networkpolicy.yaml
@@ -62,6 +62,16 @@ spec:
           port: 53
         - protocol: TCP
           port: 53
+{{- range .Values.networkPolicy.egress.dnsCIDRs }}
+    - to:
+        - ipBlock:
+            cidr: {{ . }}
+      ports:
+        - protocol: UDP
+          port: 53
+        - protocol: TCP
+          port: 53
+{{- end }}
 {{- end }}
 {{- if .Values.networkPolicy.egress.allowSameNamespace }}
 {{- $hasEgress = true }}
