fix(charts): open dns cidr for nostr-query

--- a/charts/nostr-query/values-local.yaml
+++ b/charts/nostr-query/values-local.yaml
@@ -6,3 +6,8 @@ env:
   envPrefix: dev
   gitCommitHash: 3874f8c
   ollamaHost: https://ollama.cyphai.com
+
+networkPolicy:
+  egress:
+    dnsCIDRs:
+      - 10.217.4.0/23
