--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -65,6 +65,7 @@ envs:
     vaultConfigPolicyName: gitops-local
     vaultServerEnabled: true
     nostrSiteEnabled: true
+    signetLandingEnabled: true
     ollamaEnabled: true
     ollamaMode: external
     nostrQueryEnabled: true
@@ -101,6 +102,7 @@ envs:
     vaultConfigPolicyName: gitops-sno
     vaultServerEnabled: false
     nostrSiteEnabled: false
+    signetLandingEnabled: false
     ollamaEnabled: false
     ollamaMode: disabled
     nostrQueryEnabled: false
@@ -137,6 +139,7 @@ envs:
     vaultConfigRoleName: gitops-prod
     vaultConfigPolicyName: gitops-prod
     nostrSiteEnabled: false
+    signetLandingEnabled: false
     ollamaEnabled: false
     ollamaMode: disabled
     nostrQueryEnabled: false
