--- a/charts/signet-landing/values.yaml
+++ b/charts/signet-landing/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/signeting/signet-landing
+  repository: quay.io/paulcapestany/signet-landing
   tag: "0.1.0"
   pullPolicy: IfNotPresent
 
