--- a/charts/signet-landing/templates/deployment.yaml
+++ b/charts/signet-landing/templates/deployment.yaml
@@ -12,6 +12,12 @@ spec:
       labels:
         app: signet-landing
     spec:
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- range .Values.imagePullSecrets }}
+        - name: {{ . | quote }}
+        {{- end }}
+      {{- end }}
       containers:
         - name: web
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
