--- a/charts/signet-landing/values-local.yaml
+++ b/charts/signet-landing/values-local.yaml
@@ -8,3 +8,7 @@ ingress:
   className: ""
   tlsSecretName: ""
   clusterIssuerName: ""
+
+# Use existing Quay pull secret for private image pulls in local
+imagePullSecrets:
+  - quay-auth
