--- a/charts/ci-pipelines/tests/trigger_bindings_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_bindings_test.yaml
@@ -61,8 +61,22 @@ tests:
       - equal:
           path: spec.params[1].name
           value: git-revision
-  - it: renders TriggerBinding for gitops maintenance pipeline
+  - it: renders TriggerBinding for signet-landing pipeline
     documentIndex: 4
+    asserts:
+      - isKind:
+          of: TriggerBinding
+      - equal:
+          path: metadata.name
+          value: signet-landing-build-and-push-binding
+      - equal:
+          path: spec.params[0].name
+          value: git-repo-url
+      - equal:
+          path: spec.params[1].name
+          value: git-revision
+  - it: renders TriggerBinding for gitops maintenance pipeline
+    documentIndex: 5
     asserts:
       - isKind:
           of: TriggerBinding
