--- a/charts/ci-pipelines/tests/trigger_templates_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_templates_test.yaml
@@ -49,8 +49,19 @@ tests:
       - equal:
           path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
           value: 1.00069e+09
-  - it: renders TriggerTemplate for gitops maintenance pipeline
+  - it: renders TriggerTemplate for signet-landing pipeline
     documentIndex: 4
+    asserts:
+      - isKind:
+          of: TriggerTemplate
+      - equal:
+          path: metadata.name
+          value: signet-landing-build-and-push-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
+  - it: renders TriggerTemplate for gitops maintenance pipeline
+    documentIndex: 5
     asserts:
       - isKind:
           of: TriggerTemplate
