--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -27,6 +27,9 @@ imageUpdater:
   nostouch:
     enabled: true
     pause: false
+  signetLanding:
+    enabled: true
+    pause: false
 
 vault:
   runtime:
@@ -41,6 +44,7 @@ sampleAppImages:
   toyWeb: quay.io/paulcapestany/toy-web
   nostrThreads: quay.io/paulcapestany/nostr_threads
   nostouch: quay.io/paulcapestany/nostouch
+  signetLanding: quay.io/paulcapestany/signet-landing
 
 # New services (env toggles used by templates)
 strfry:
