--- a/charts/bitiq-umbrella/templates/app-toy-web.yaml
+++ b/charts/bitiq-umbrella/templates/app-toy-web.yaml
@@ -25,7 +25,7 @@ metadata:
     {{- end }}
     argocd-image-updater.argoproj.io/toy-web.helm.image-name: image.repository
     argocd-image-updater.argoproj.io/toy-web.helm.image-tag: image.tag
-    argocd-image-updater.argoproj.io/toy-web.allow-tags: "regexp:^v\\d+\\.\\d+\\.\\d+-commit\\.[0-9a-f]{7,}$"
+    argocd-image-updater.argoproj.io/toy-web.allow-tags: "regexp:^v\\d+\\.\\d+\\.\\d+-commit\\.g[0-9a-f]{7,}$"
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/write-back-target: helmvalues:/charts/toy-web/values-{{ .Values.env }}.yaml
     argocd-image-updater.argoproj.io/git-branch: {{ .Values.targetRevision }}
