chore(ci-pipelines): ignore sa pullsecret drift

--- a/charts/bitiq-umbrella/templates/app-ci-pipelines.yaml
+++ b/charts/bitiq-umbrella/templates/app-ci-pipelines.yaml
@@ -40,6 +40,8 @@ spec:
       kind: ServiceAccount
       jsonPointers:
         - /secrets
+        - /imagePullSecrets
+        - /metadata/annotations/openshift.io~1internal-registry-pull-secret-ref
   syncPolicy:
     automated:
       prune: true
