fix(charts): route signet.ing via landing ingress

--- a/charts/signet-landing/values-local.yaml
+++ b/charts/signet-landing/values-local.yaml
@@ -1,13 +1,15 @@
 route:
-  enabled: true
+  enabled: false
   host: signet.ing
   clusterIssuerName: letsencrypt-dns01-route53-local
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  tlsSecretName: ""
-  clusterIssuerName: ""
+  tlsSecretName: signet-landing-tls
+  clusterIssuerName: letsencrypt-dns01-route53-local
+  additionalHosts:
+    - www.signet.ing
 
 # Repo is public; no pull secret needed in local
 imagePullSecrets: []
