--- a/charts/signet-landing/templates/ingress.yaml
+++ b/charts/signet-landing/templates/ingress.yaml
@@ -1,7 +1,18 @@
 {{- $ing := default (dict) .Values.ingress -}}
 {{- $route := default (dict) .Values.route -}}
 {{- $host := (get $route "host") | default "" }}
-{{- if and $ing.enabled $host }}
+{{- $hosts := list }}
+{{- if $host }}
+  {{- $hosts = append $hosts $host }}
+{{- end }}
+{{- if $ing.additionalHosts }}
+  {{- range $extra := $ing.additionalHosts }}
+    {{- if $extra }}
+      {{- $hosts = append $hosts $extra }}
+    {{- end }}
+  {{- end }}
+{{- end }}
+{{- if and $ing.enabled (gt (len $hosts) 0) }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -26,20 +37,24 @@ spec:
   ingressClassName: {{ $ing.className }}
   {{- end }}
   rules:
-    - host: {{ $host | quote }}
+    {{- range $h := $hosts }}
+    - host: {{ $h | quote }}
       http:
         paths:
           - path: /
             pathType: Prefix
-              backend:
-                service:
-                  name: signet-landing
-                  port:
-                    number: {{ .Values.service.port }}
+            backend:
+              service:
+                name: signet-landing
+                port:
+                  number: {{ $.Values.service.port }}
+    {{- end }}
   {{- if $ing.tlsSecretName }}
   tls:
     - hosts:
-        - {{ $host | quote }}
+        {{- range $h := $hosts }}
+        - {{ $h | quote }}
+        {{- end }}
       secretName: {{ $ing.tlsSecretName }}
   {{- end }}
 {{- end }}
