chore(charts): realign toy tags with umbrella appVersion

--- a/charts/toy-service/values-local.yaml
+++ b/charts/toy-service/values-local.yaml
@@ -6,7 +6,7 @@ additionalRoutes:
     path: /echo
 image:
   repository: quay.io/paulcapestany/toy-service
-  tag: v0.3.40-commit.g581dc4d
+  tag: v0.3.39-commit.8a1475e
 backend:
   secretMount:
     reloadSidecar:
