--- a/charts/toy-web/values-sno.yaml
+++ b/charts/toy-web/values-sno.yaml
@@ -2,4 +2,4 @@ baseDomain: apps.sno.example
 # Override image per env to ensure deterministic tag shape
 image:
   repository: quay.io/paulcapestany/toy-web
-  tag: v0.1.41-commit.dddb93d
+  tag: v0.1.43-commit.g42e6409
