--- a/charts/vault-dev/values.yaml
+++ b/charts/vault-dev/values.yaml
@@ -23,12 +23,7 @@ securityContext:
   capabilities:
     drop: ["ALL"]
 
-# Keep in sync with the vault-dev namespace supplemental group range (see
-# `oc get project vault-dev -o jsonpath='{.metadata.annotations.openshift\.io/sa\.scc\.supplemental-groups}'`)
-podSecurityContext:
-  runAsNonRoot: true
-  fsGroup: 1000780000
-  fsGroupChangePolicy: OnRootMismatch
+podSecurityContext: {}
 
 resources: {}
 
