--- a/charts/vault-dev/templates/statefulset.yaml
+++ b/charts/vault-dev/templates/statefulset.yaml
@@ -19,6 +19,7 @@ spec:
         app.kubernetes.io/name: {{ .Chart.Name }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      serviceAccountName: {{ .Values.service.name }}
       {{- with .Values.podSecurityContext }}
       securityContext:
 {{ toYaml . | indent 8 }}
