--- a/charts/bootstrap-operators/values.yaml
+++ b/charts/bootstrap-operators/values.yaml
@@ -70,6 +70,7 @@ argoInstance:
         enabled: true
     extraConfig:
       timeout.reconciliation: 30s
+      accounts.admin: "apiKey, login"
     controller:
       resources:
         requests:
