fix(toy-service): use /healthz for probes

--- a/charts/toy-service/values-common.yaml
+++ b/charts/toy-service/values-common.yaml
@@ -2,7 +2,7 @@ baseDomain: ""
 
 replicaCount: 1
 hostPrefix: "svc-api"
-healthPath: "/"
+healthPath: "/healthz"
 image:
   repository: quay.io/paulcapestany/toy-service
   tag: "v0.2.21-commit.b7791f1"
