fix(vault-runtime): template quay dockerconfigjson

--- a/charts/vault-runtime/templates/10-secrets-platform.yaml
+++ b/charts/vault-runtime/templates/10-secrets-platform.yaml
@@ -40,6 +40,14 @@ spec:
     overwrite: true
     name: {{ $quay.destinationName }}
     type: {{ $quay.type | default "Opaque" }}
+{{- if eq ($quay.type | default "Opaque") "kubernetes.io/dockerconfigjson" }}
+    transformation:
+      excludes:
+        - ".*"
+      templates:
+        .dockerconfigjson:
+          text: {{ printf "{{ or (get .Secrets %q) (get .Secrets %q) }}" ($quay.sourceKey | default "dockerconfigjson") ".dockerconfigjson" | quote }}
+{{- end }}
 {{- if $quay.destinationAnnotations }}
     annotations:
 {{ toYaml $quay.destinationAnnotations | indent 6 }}
