--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -12,6 +12,12 @@ pipelinesNamespace: openshift-pipelines
 repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 
+capacity:
+  enabled: false
+  # When autoscaling is enabled (MachineAutoscaler), Argo CD must not fight live
+  # changes to MachineSet replicas. Enable ignoreDifferences on /spec/replicas.
+  ignoreMachineSetReplicas: false
+
 # Image Updater defaults (platform filter)
 imageUpdater:
   # Set to the node architecture of your cluster
