--- a/.github/workflows/gitops-validate.yml
+++ b/.github/workflows/gitops-validate.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Set up Helm
         uses: azure/setup-helm@v4
+        with:
+          version: v4.0.4
 
       - name: Install validation tools
         run: |
