fix(operators): avoid ClusterPolicy sync before CRD

--- a/charts/cluster-capacity/templates/nvidia-clusterpolicy.yaml
+++ b/charts/cluster-capacity/templates/nvidia-clusterpolicy.yaml
@@ -15,6 +15,9 @@ apiVersion: {{ $cp.apiVersion | default "nvidia.com/v1" | quote }}
 kind: ClusterPolicy
 metadata:
   name: {{ $cp.name | default "cluster-policy" | quote }}
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "1"
 spec:
 {{ toYaml (required "cluster-capacity: nvidia.clusterPolicy.spec is required when clusterPolicy.create=true" $cp.spec) | indent 2 }}
 {{- end }}
