--- a/charts/cluster-capacity/templates/nvidia-operator.yaml
+++ b/charts/cluster-capacity/templates/nvidia-operator.yaml
@@ -15,6 +15,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ $ns | quote }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   labels:
     app.kubernetes.io/managed-by: Helm
 ---
@@ -30,6 +32,8 @@ kind: OperatorGroup
 metadata:
   name: {{ $og.name | default "nvidia-gpu-operator" | quote }}
   namespace: {{ $ns | quote }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   {{- if hasKey $og "targetNamespaces" }}
   targetNamespaces:
@@ -44,6 +48,8 @@ kind: Subscription
 metadata:
   name: {{ required "cluster-capacity: nvidia.subscription.name is required" $n.subscription.name | quote }}
   namespace: {{ $ns | quote }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   channel: {{ $n.subscription.channel | default "stable" | quote }}
   name: {{ required "cluster-capacity: nvidia.subscription.name is required" $n.subscription.name | quote }}
