--- a/charts/cluster-capacity/values-common.yaml
+++ b/charts/cluster-capacity/values-common.yaml
@@ -46,6 +46,20 @@ nvidia:
         driverInstallDir: /run/nvidia/driver
       operator:
         use_ocp_driver_toolkit: true
+      driver:
+        enabled: true
+      toolkit:
+        enabled: true
+      devicePlugin:
+        enabled: true
+      gfd:
+        enabled: true
+      nodeStatusExporter:
+        enabled: true
+      dcgm:
+        enabled: true
+      dcgmExporter:
+        enabled: true
       daemonsets:
         tolerations:
           - key: nvidia.com/gpu
