--- a/charts/cluster-capacity/tests/nvidia_operator_test.yaml
+++ b/charts/cluster-capacity/tests/nvidia_operator_test.yaml
@@ -34,6 +34,9 @@ tests:
       - equal:
           path: metadata.annotations["argocd.argoproj.io/sync-wave"]
           value: "0"
+      - equal:
+          path: spec.targetNamespaces[0]
+          value: nvidia-gpu-operator
 
   - it: renders Subscription with sync-wave 0
     documentIndex: 2
