--- a/charts/cluster-capacity/templates/nvidia-rbac.yaml
+++ b/charts/cluster-capacity/templates/nvidia-rbac.yaml
@@ -34,6 +34,18 @@ rules:
       - update
       - patch
       - delete
+  - apiGroups:
+      - nfd.openshift.io
+    resources:
+      - nodefeaturediscoveries
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
