--- a/charts/cluster-capacity/templates/nvidia-rbac.yaml
+++ b/charts/cluster-capacity/templates/nvidia-rbac.yaml
@@ -35,6 +35,18 @@ rules:
       - patch
       - delete
   - apiGroups:
+      - monitoring.coreos.com
+    resources:
+      - servicemonitors
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
       - nfd.openshift.io
     resources:
       - nodefeaturediscoveries
